--- a/backend/pratise backend/practice project pin/pin/views/product.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/product.ejs
@@ -8,7 +8,7 @@
 
         .header-nav .nav-part2 a {
             z-index: 99;
-            color:#E6622B;
+            color: #E6622B;
         }
 
         .product {
@@ -94,14 +94,13 @@
             padding-top: 15px;
         }
     </style>
-  
     <div class="product">
         <div class="card">
-            <h1>CHANGE THE COURSE COOK KIT</h1>
+            <h1 name="title">CHANGE THE COURSE COOK KIT</h1>
             <div class="part">
                 <%- include("shared.ejs") -%>
-                <a href="#">$96</a>
-                <a href="/add-to-card">ADD TO CARD</a>
+                    <a href="#">$96</a>
+                    <a href="/add-to-card">ADD TO CARD</a>
             </div>
 
         </div>
@@ -110,12 +109,17 @@
                 alt="">
 
         </div>
+
+
         <div class="card3">
             <h6>INFO</h6>
-            <h5>At Two Good Co, we believe that food is more than food…we believe that food is a universal love
+            <h5>At Two Good Co, we believe that food is more than food…we believe that food is a
+                universal love
                 language, with the power to change the course of someone’s life.
-                Our Change The Course Cookbook features shorter recipes, simpler ingredients and adaptable techniques,
-                designed to help you achieve goodness with less, while our 100% cotton twill apron looks good and works
+                Our Change The Course Cookbook features shorter recipes, simpler ingredients and
+                adaptable techniques,
+                designed to help you achieve goodness with less, while our 100% cotton twill apron
+                looks good and works
                 hard for anyone serving up Good Food and Good Times.</h5>
 
         </div>
@@ -124,5 +128,4 @@
         <h5>$95</h5>
         <h5>50% OF PROFITS REINVESTED INTO THE TWO GOOD FOUNDATIO</h5>
     </div>
-
     <% include ./partial/footer.ejs %>
