project 6 updated and backend project updates

--- a/Projects/project 6/Fproject/views/index.ejs
+++ b/Projects/project 6/Fproject/views/index.ejs
@@ -1,10 +1,11 @@
 <%- include('../views/header/header') %>
   <link rel="stylesheet" href="/stylesheets/style.css">
-  <div class="page2">
+  <!-- page1 home -->
+  <div class="page1">
     <h1>DANE SURFACE </h1>
     <h1>TECHNOLOGY PVT. LTD.</h1>
   </div>
-  <div class="page">
+  <div class="page2">
     <div class="card">
       <img src="http://www.danesurface.com/images/Dane_Symbolic.jpeg" alt="">
     </div>
@@ -21,25 +22,183 @@
         Environmental-Friendly, Small yet Trustworthy Enterprises.</p>
     </div>
   </div>
+  <!-- page3 about  -->
   <div class="page3">
     <h1>About Us</h1>
     <div class="cards">
-    <div class="card2">
-      <p>Dane Surface Technology Pvt.Ltd. was established in 2010 and we are manufacturing Electroplating and Surface finishig products.</p>
-      <br>
-      <p>The company is promoted by Young & Dynamic Entrepreneur Director- Mr. K.R.Dane, He has vast experience more than 17 Years of in electroplating and surface finishing chemicals.
-        We are working in 78 plus districts of the country and are providing excellent service to our customers. In Electroplating Type, We make excellent world class products like...
-        <strong>Acid Zinc, Alkaline Zinc, Alkaline Zinc Iron, Zinc Nickel, Electroless Nickel, Acid Tin, Acid Copper, Bright and dull Nickel, Industrial & Jewellery Silver Brightner, Cold & Hot Cleaners, Anodic Cleaners etc...</strong></p>
+      <div class="card2">
+        <p>Dane Surface Technology Pvt.Ltd. was established in 2010 and we are manufacturing Electroplating and Surface
+          finishig products.</p>
         <br>
-        <p>Our company has a production plant in an area of 40000 sq ft. We have all the latest tools required for the production process. The advance instrument available in testing Labrotary required for raw materials,production as well as finished Products.</p>
+        <p>The company is promoted by Young & Dynamic Entrepreneur Director- Mr. K.R.Dane, He has vast experience more
+          than 17 Years of in electroplating and surface finishing chemicals.
+          We are working in 78 plus districts of the country and are providing excellent service to our customers. In
+          Electroplating Type, We make excellent world class products like...
+          <strong>Acid Zinc, Alkaline Zinc, Alkaline Zinc Iron, Zinc Nickel, Electroless Nickel, Acid Tin, Acid Copper,
+            Bright and dull Nickel, Industrial & Jewellery Silver Brightner, Cold & Hot Cleaners, Anodic Cleaners
+            etc...</strong>
+        </p>
         <br>
-        <p>Dane Surface Technology working towords the commitment to deliver quality products in time to the best satisfaction of every customer. Also, company is always on the lookout for future environmental changes and changes suggested by OEM's.</p>
+        <p>Our company has a production plant in an area of 40000 sq ft. We have all the latest tools required for the
+          production process. The advance instrument available in testing Labrotary required for raw
+          materials,production as well as finished Products.</p>
+        <br>
+        <p>Dane Surface Technology working towords the commitment to deliver quality products in time to the best
+          satisfaction of every customer. Also, company is always on the lookout for future environmental changes and
+          changes suggested by OEM's.</p>
+      </div>
+      <div class="card">
+        <img src="http://www.danesurface.com/images/Mr%20Dane%20K.R.jpeg" alt="">
+        <h4>Mr Dane K.R (Director)</h4>
+      </div>
     </div>
-    <div class="card">
-      <img src="http://www.danesurface.com/images/Mr%20Dane%20K.R.jpeg" alt="">
-      <h4>Mr Dane K.R (Director)</h4>
+    <div class="cards2">
+      <div class="card">
+        <div class="card2">
+          <h3>Cleaners</h3>
+          <h3>Cold & Hot Cleaners</h3>
+          <h3>Anodic Cleaners</h3>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card2">
+          <h3>Zinc Nickel</h3>
+          <h3>Alkaline Zinc Nickel</h3>
+          <h3>Acid Zinc Nickel</h3>
+        </div>
+      </div>
+
+
+      <div class="card">
+        <div class="card2">
+          <h3>Passivations</h3>
+          <h3>Trivalent &</h3>
+          <h3>Hexvalent Passivation</h3>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card2">
+          <h3>Silver Plating</h3>
+          <h3>Jewellery Silver</h3>
+          <h3>Industrial Silver</h3>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card2">
+          <h3>Acid Zinc</h3>
+          <h3>Super Bright Finish</h3>
+          <h3>Fast Throwing Power</h3>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card2">
+          <h3>Alkaline Zinc</h3>
+          <h3>Eco Friendly</h3>
+          <h3>Trouble Free</h3>
+        </div>
+
+      </div>
     </div>
   </div>
 
+
+  <div class="page33">
+    <div class="card">
+      <h1>Quality Policy</h1>
+      <p>We are ISO 9001: 2015 Certified company We strive for best Quality Performance in surface technology product
+        and continual </p>
+      <p>improvement in our process</p>
+      <p>Dane Surface Technology Pvt Ltd is consistently provide electroplating and surface finishing product along with
+        our best services that meet </p>
+      <p>or exceed the requirements and expectation of our customers We will actively pursue ever improving quality
+        through programs.</p>
+    </div>
+  </div>
+
+  <div class="page4">
+
+    <div class="products">
+      <h1>Product Gallery</h1>
+      <div class="plist1">
+        <div class="card">
+          <img src="http://www.danesurface.com/images/acid%20inhibitor.jpeg" alt="">
+          <h3>Acid Inhibitor</h3>
+        </div>
+        <div class="card">
+          <img src="http://www.danesurface.com/images/ACID%20ZINC%20PLATING.jpg" alt="">
+          <h3>Acid Zinc Plating</h3>
+        </div>
+        <div class="card">
+          <img src="http://www.danesurface.com/images/CYANIDE%20COPPER%20PLATING.jpg" alt="">
+          <h3>Cynide Copper Plating</h3>
+        </div>
+      </div>
+
+      <div class="plist1">
+        <div class="card">
+          <img src="http://www.danesurface.com/images/DST%20BLUE%2077.jpg" alt="">
+          <h3>Acid Inhibitor</h3>
+        </div>
+        <div class="card">
+          <img src="http://www.danesurface.com/images/silver%20.jpeg" alt="">
+          <h3>Acid Zinc Plating</h3>
+        </div>
+        <div class="card">
+          <img src="http://www.danesurface.com/images/Electroless%20Nickel%20plating.jpeg" alt="">
+          <h3>Cynide Copper Plating</h3>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="page5">
+    <div class="card">
+      <img src="http://www.danesurface.com/images/Labphoto.jpg" alt="">
+
+    </div>
+    <div class="card2">
+      <h1>Rearch & Devlopment</h1>
+      <p>Our R&D works as key roles in developing business through its future generations and environment friendly
+        products and process development. We hire experience technical team with advance equipments XRF Gas
+        chromatography , higher version of microscope. Our R&D team is in regular touch with institute like IIT for
+        devloping environment friendly product. Our R&D team closely in touch with field staff for devloping new Eco
+        friendly product as well as modification or improvements in exiting products for customers satisfaction.</p>
+
+    </div>
+  </div>
+  <div class="page6">
+    <div class="card">
+      <p>Company Address :
+        Gut No 248,Plot No 1,
+        Waluj Village, Tal Gangapur,
+        Dist- Aurangabad 431133.
+        MIDC Waluj Aurangabad,PIN Code-431136
+        Maharashtra State,India.
+        Head Office -Aurangabad : 09168619801
+        Branch Pune : 09168619802
+        Email ID : k.dane@danesurface.com
+        Website : www.danesurface.com</p>
+
+    </div>
+    <div class="card2">
+      <h1>Enquiry Form</h1>
+      <form action="">
+        <p>Customer Name: <input class="textdata" type="text" name="name" id="customerName"></p>
+        <p>Company Name: <input class="textdata" type="text" name="companyName" id="companyName"></p>
+        <div class="cards">
+          <p>City: <input type="text" name="city" id="city"></p>
+          <p>Contact Number : <input type="number" name="number" id="ContactNumber"></p>
+
+        </div>
+
+        <p>Email ID : <input class="textdata" type="email" name="email" id="email"></p>
+        <p>Enquiry Details : <textarea name="enquiry" id="enquiry" cols="50" rows="10"></textarea></p>
+        <input type="submit" value="Send" class="send">
+      </form>
+
+    </div>
   </div>
   <%- include('../views/footer/footer') %>
