--- a/Projects/project 6/Fproject/public/stylesheets/style.css
+++ b/Projects/project 6/Fproject/public/stylesheets/style.css
@@ -10,7 +10,7 @@ html,body{
 }
 
 
-.page2{
+.page1{
   min-height: 70vh;
   width: 100%;
   display: flex;
@@ -20,12 +20,12 @@ html,body{
   padding: 0px 100px;
 }
 
-.page2 h1{
+.page1 h1{
   font-size: 7vw;
 }
 
-.page{
-  min-height: 75vh;
+.page2{
+  min-height: 90vh;
   width: 100%;
   display: flex;
   align-items: center;
@@ -35,34 +35,36 @@ html,body{
   padding: 0px 100px;
 }
 
-.page img{
+.page2 img{
   height: 430px;
   width: 100%;
 }
 
-.page .card2{
+.page2 .card2{
   display: flex;
   align-items: start;
   justify-content: center;
   flex-direction: column;
   padding: 20px 10px;
   /* background-color: rgba(36, 142, 204, 0.348); */
-  border: 2px solid gray;
+  border: 1px solid gray;
   border-radius: 5px;
 }
 
-.page .card2 h1{
+.page2 .card2 h1{
   font-size: 1.5vw;
   font-weight: 600;
   color: blue;
   word-spacing: 10px;
+  padding-bottom: 10px;
 }
 
 
-.page .card2 p{
+.page2 .card2 p{
   font-size: 1.2vw;
   text-align: justify;
   font-weight: 300;
+  line-height: 35px;
 }
 
 
@@ -112,3 +114,198 @@ html,body{
   text-align: justify;
   padding-top: 10px;
 }
+
+
+.page3 .cards2{
+  display: grid;
+  grid-template-columns:repeat(3,1fr);
+  grid-gap: 10px;
+  text-align: center;  
+  padding-top: 50px;
+  padding-bottom: 5px;
+}
+
+
+.page3 .cards2 .card{
+  background-color:#A52A2A;
+  padding: 30px 70px;
+  border-radius: 20px;
+}
+
+.page3 h3{
+  color: #beb5b5;
+  font-weight: 600;
+
+}
+
+
+.page33{
+  min-height: 50vh;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+.page33 .card h1{
+  padding-bottom: 30px;
+}
+.page33 .card p{
+  padding: 1px 0px;
+  font-size: 1.2vw;
+  line-height: 35px;
+
+}
+
+
+
+.page4{
+  min-height: 100vh;
+  width: 100%;
+  padding: 0px 100px;
+}
+
+
+.page4 .products h1{
+  text-align: center;
+}
+
+.page4 .products .plist1{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 100px;
+
+
+}
+
+.page4 .products .plist1 .card{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
+  
+}
+
+.page4 .products .plist1 img{
+  height: 350px;
+  width: 350px;
+  object-fit:cover;
+  object-position: center;
+  border-radius: 30px;
+}
+
+
+.page5{
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 40px;
+  padding: 0px 200px;
+}
+.page5 .card{
+  width: 50%;
+}
+
+.page5 .card2{
+  width: 70%;
+}
+
+.page5 .card img{
+  height: 350px;
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 5px;
+}
+
+.page5 .card2 p{
+  padding-top: 50px;
+  font-size: 1.2vw;
+  text-align: justify;
+  font-weight: 400;
+  line-height: 30px;
+}
+
+
+.page6{
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.page6 .card{
+  width: 50%;
+}
+
+
+.page6 .card2{
+  width: 50%;
+}
+
+.page6 .card2 form{
+  /* background-color: red; */
+  /* display: grid;
+  grid-template-columns:repeat(2,1fr);
+  grid-gap: 20px; */
+  display: flex;
+  align-items: start;
+  /* justify-content: center; */
+  flex-direction: column;
+  gap: 20px;
+}
+
+.page6 .card2 input{
+  /* width: 200%; */
+  height: 30px;
+  margin: 10px 10px;
+
+}
+
+.page6 .card2 .cards{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.page6 .card2 .cards input{
+  width: 100%;
+}
+
+.page6 .card2 .textdata{
+  width: 100%;
+  height:40px;
+
+}
+
+.page6 .card2 p{
+  font-size: 20px;
+  margin-left: 20px;
+  width: 70%;
+}
+
+.page6 .card2 .cards{
+  width: 72%;
+
+}
+
+.page6 .card2 textarea{
+  width: 100%;
+  margin: 10px;
+}
+
+.page6 .card2 .send{
+  padding: 20px 50px 29px;
+  margin-left: 30px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+}
+
