backend project assisment

--- a/Projects/project 6/Fproject/views/header/header.ejs
+++ b/Projects/project 6/Fproject/views/header/header.ejs
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <!-- <style>
         *{
             padding: 0;
             margin: 0;
@@ -75,7 +76,7 @@
 
 
         
-    </style>
+    </style> -->
 </head>
 
 <body>
@@ -91,19 +92,19 @@
             </div>
 
         </nav> -->
-        <div class="navbar2">
+        <div class="navbar2 flex items-center justify-between   px-20">
             <div class="card1">
-                <img src="http://www.danesurface.com/images/new%20logo.jpeg" height="75px" alt="">
+                <img class="h-20 w-full" src="http://www.danesurface.com/images/new%20logo.jpeg" height="75px" alt="">
                 <!-- <h1>Dane Surface Technology Pvt Ltd</h1> -->
-                <h1>Metallic Bonding</h1>
+                <h1 class="font-normal">Metallic Bonding</h1>
             </div>
-            <div class="card2">
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Product</a>
-                <a href="#">R & D</a>
-                <a href="#">Enquiry</a>
-                <a href="#">Contact Us</a>
+            <div class="card2 flex items-center justify-between gap-10">
+                <a class="text-lg font-normal" href="#">Home</a>
+                <a class="text-lg font-normal" href="#">About</a>
+                <a class="text-lg font-normal" href="#">Product</a>
+                <a class="text-lg font-normal" href="#">R & D</a>
+                <a class="text-lg font-normal" href="#">Enquiry</a>
+                <a class="text-lg font-normal" href="#">Contact Us</a>
             </div>
 
         </div>
