--- a/Projects/project 6/Fproject/public/stylesheets/style.css
+++ b/Projects/project 6/Fproject/public/stylesheets/style.css
@@ -251,10 +251,6 @@ html,body{
 }
 
 .page6 .card2 form{
-  /* background-color: red; */
-  /* display: grid;
-  grid-template-columns:repeat(2,1fr);
-  grid-gap: 20px; */
   display: flex;
   align-items: start;
   /* justify-content: center; */
@@ -282,7 +278,7 @@ html,body{
 
 .page6 .card2 .textdata{
   width: 100%;
-  height:40px;
+  height:30px;
 
 }
 
@@ -307,5 +303,46 @@ html,body{
   margin-left: 30px;
   margin-bottom: 20px;
   border-radius: 5px;
+}
+
+
+
+.page6 .contact{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.page6 .card h1{
+  font-size: 22px;
+  font-weight: 600;
+  
+}
+
+
+.page6 .card{
+  padding-left: 100px;
+}
+
+
+.page6 .card span{
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.page6 .card h1{
+  padding: 10px 0px;
+}
+
+
+.page6 .card h4{
+  font-size: 20px;
+  font-weight: 400;
+  
+}
+
+.page6 .card h2{
+  margin-top: 20px;
+  font-size: 20px;
 }
 
