--- a/Projects/project 6/Fproject/views/index.ejs
+++ b/Projects/project 6/Fproject/views/index.ejs
@@ -172,9 +172,9 @@
   </div>
   <div class="page6">
     <div class="contact">
-      <div class="card1">
-        <img src="http://www.danesurface.com/images/new%20logo.jpeg" height="75px" alt="">
-        <h1>Metallic Bonding</h1>
+      <div class="card1 flex items-start  flex-col ml-[-70px] mb-20">
+        <img class="h-20 w-20" src="http://www.danesurface.com/images/new%20logo.jpeg" height="75px" alt="">
+        <h1 class="font-normal">Metallic Bonding</h1>
     </div>
       <div class="card">
         <h1>Company Address :</h1>
@@ -182,19 +182,19 @@
           Waluj Village, Tal Gangapur,
           Dist- Aurangabad 431133.</h4>
           <h4>MIDC Waluj Aurangabad,PIN Code-431136 Maharashtra State,India.</h4>
-          <h2>Head Office : <span>Aurangabad</span></h2>
-          <h2>Branch Pune : <span>09168619802</span></h2>
-          <h2>Email ID : <span> k.dane@danesurface.com</span></h2>
-          <h2>Website : <span> www.danesurface.com</span></h2>
+          <h2 class="font-bold">Head Office : <span>Aurangabad</span></h2>
+          <h2 class="font-bold">Branch Pune : <span>09168619802</span></h2>
+          <h2 class="font-bold">Email ID : <span>k.dane@danesurface.com</span></h2>
+          <h2 class="font-bold">Website : <span> www.danesurface.com</span></h2>
   
       </div>
 
     </div>
     
     <div class="card2">
-      <h1>Enquiry Form</h1>
+      <h1 class="font-bold text-[30px]">Enquiry Form</h1>
       <form action="">
-        <p>Customer Name: <input class="textdata" type="text" name="name" id="customerName"></p>
+        <p>Customer Name: <input class="textdata bg-gray-400" type="text" name="name" id="customerName"></p>
         <p>Company Name: <input class="textdata" type="text" name="companyName" id="companyName"></p>
         <div class="cards">
           <p>City: <input type="text" name="city" id="city"></p>
