--- a/Projects/project 6/Fproject/views/header/header.ejs
+++ b/Projects/project 6/Fproject/views/header/header.ejs
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-    <!-- <style>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
         *{
             padding: 0;
             margin: 0;
@@ -76,7 +76,7 @@
 
 
         
-    </style> -->
+    </style>
 </head>
 
 <body>
