--- a/reactjs/react practise/postFullStack project/frontend/src/App.css
+++ b/reactjs/react practise/postFullStack project/frontend/src/App.css
@@ -44,6 +44,9 @@
   color: green;
   font-size: 100px;
   font-weight: 600;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 
 
