--- a/reactjs/react practise/postFullStack project/frontend/src/App.css
+++ b/reactjs/react practise/postFullStack project/frontend/src/App.css
@@ -44,9 +44,10 @@
   color: green;
   font-size: 100px;
   font-weight: 600;
-  background-position: center;
+  /* background-position: center;
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: 100%; */
+  /* background-image: image(); */
 }
 
 
@@ -117,6 +118,72 @@
   z-index: 91;
   background-color: yellow;
 } */
+
+
+
+
+
+
+/* .card-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.card {
+  display: none;
+  width: 300px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  text-align: center;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.card.active {
+  display: block;
+  opacity: 1;
+} */
+
+
+
+
+
+/* .carousel {
+  background: #f8f9fa;
+  width: 100%;
+  margin: 0 auto;
+} */
+
+/* .carousel-cell {
+  width: 100%; 
+  height: 200px;
+  margin-right: 10px;
+  background: #e1e5ea;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  color: #333;
+} */
+
+
+
+
+
+/* .carousel .carousel-cell h1{
+  background-color: red;
+  transition: linear 1s;
+} */
+
+
+
+
+
+
+
 
 
 
