updated fullstack project

--- a/reactjs/react practise/postFullStack project/frontend/src/App.css
+++ b/reactjs/react practise/postFullStack project/frontend/src/App.css
@@ -204,7 +204,7 @@
 .page-container {
   opacity: 0;
   transform: translateY(100px);
-  transition: opacity 1s linear, transform 0.5s linear;
+  transition: opacity 1s linear, transform 0.8s linear;
 }
 
 .page-container.visible {
@@ -292,6 +292,86 @@
   opacity: 1;
   transform: translateX(0);
 }
+
+
+/* update user */
+.UpdatedUser {
+  opacity: 0;
+  transform: translateX(100px);
+  transition: opacity 0.5s linear, transform 0.8s linear;
+}
+
+.UpdatedUser.visible {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+
+/* add post*/
+.AddPost {
+  opacity: 0;
+  transform: translateX(100px);
+  transition: opacity 0.5s linear, transform 0.8s linear;
+}
+
+.AddPost.visible {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+
+/*postPage */
+.CreatePost {
+  opacity: 0;
+  transform: translateX(100px);
+  transition: opacity 1s linear, transform 1s linear;
+}
+
+.CreatePost.visible1 {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+
+/*postPage */
+.HomePost {
+  opacity: 0;
+  transform: translateX(100px);
+  transition: opacity 1s linear, transform 1s linear;
+}
+
+.HomePost.visible1 {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+
+/*postPage */
+.Ownerpage {
+  opacity: 0;
+  transform: translateY(100px);
+  transition: opacity 1s linear, transform 1s linear;
+}
+
+.Ownerpage.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+/* searchPost */
+.SearchPost {
+  opacity: 0;
+  transform: translateY(100px);
+  transition: opacity 1s linear, transform 1s linear;
+}
+
+.SearchPost.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+
+
 
 
 
